# rust-server-playground

./: .env  .gitignore  Cargo.toml
src/: config.rs  errors.rs  main.rs  user_dao.rs  user_repository.rs
src/model/: user.rs
src/sql/: add_user.sql  delete_user.sql  get_user.sql  schema.sql
