[package]
name = "worktime"
version = "0.1.0"
authors = ["Mathias Oertel <e0e9cf7e@opayq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.57", default-features = false, features = ["alloc"] }
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-serde_json-1"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
